# radiance-playground

./: .gitignore  .gitmodules  CMakeLists.txt  configure.bat  playground.puml  renderpass.graphml
assets/: sphere.mtl
dissertation/: main.tex  rapportCS.cls
dissertation/Bib/: PFEM2.bib  myBib.bib
internal/: CMakeLists.txt
internal/engine/: CMakeLists.txt  camera.cpp  camera.hpp  probe_grid.cpp  probe_grid.hpp  scriptable.hpp  uniform.hpp
internal/graphics/: CMakeLists.txt  buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  swapchain.cpp  swapchain.hpp
internal/renderer/: CMakeLists.txt  light.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  render_graph.cpp  render_graph.hpp  render_phase.cpp  render_phase.hpp  render_state.cpp  render_state.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp
internal/wsi/: CMakeLists.txt  window.cpp  window.hpp
shaders/: environment_map.frag  environment_map.vert  final_image_direct.frag  final_image_direct_indirect.frag  irradiance_convolution.frag  multiview_skybox.vert  phong.frag  phong.vert  phong_simple.frag  phong_simple_rt.frag  postprocess.frag  probe_grid_debug.frag  probe_grid_debug.vert  radiance_apply_deferred.frag  radiance_cascades.comp  radiance_gather.comp  radiance_gather_rt.comp  radiance_gather_voxel.comp  screen.vert  simple.vert  skybox.frag  skybox.vert  unlit.frag  white.frag
shaders/deferred/: radiance_apply.frag  unlit.frag
shaders/forward/: blue.frag  green.frag  phong.frag  red.frag
shaders/g2ip/: environment_map.frag  environment_map.vert  phong.frag  phongrt.frag
shaders/pp/: final_image.frag  radiance_apply.frag
shaders/rc/: radiance_gather_3drt.comp
shaders/rt/: phong.frag
shadertoy/: buffera.glsl  bufferb.glsl  bufferc.glsl  bufferd.glsl  common.glsl  image.glsl  radiance_cascades_test.glsl.cpp
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  application.cpp  application.hpp  input_manager.cpp  input_manager.hpp  keycode.hpp  sample_scene.cpp  sample_scene.hpp  sample_scene_2d.cpp  sample_scene_2d.hpp  scriptable.hpp
src/client/render_graphs/: compute_pp_graph.cpp  compute_pp_graph.hpp  irradiance_baked_graph.cpp  irradiance_baked_graph.hpp  irradiance_baked_graph_rt.cpp  irradiance_baked_graph_rt.hpp  rc3d_graph.cpp  rc3d_graph.hpp  rc3d_graph_rt.cpp  rc3d_graph_rt.hpp
src/client/render_graphs/global_illumination_with_irradiance_probes/: graph_g2ip.cpp  graph_g2ip.hpp  graph_g2iprt.cpp  graph_g2iprt.hpp
src/client/render_graphs/radiance_cascades/: graph_rc2d.cpp  graph_rc2d.hpp  graph_rc3d.cpp  graph_rc3d.hpp  graph_rc3drt.cpp  graph_rc3drt.hpp
src/client/scenes/: sample_scene.cpp  sample_scene.hpp  sample_scene_2d.cpp  sample_scene_2d.hpp  sample_scene_rc3d.cpp  sample_scene_rc3d.hpp  sample_scene_rc3d_rt.cpp  sample_scene_rc3d_rt.hpp  sample_scene_rt.cpp  sample_scene_rt.hpp
src/client/scenes/global_illumination_with_irradiance_probes/: scene_g2ip.cpp  scene_g2ip.hpp  scene_g2iprt.cpp  scene_g2iprt.hpp
src/client/scenes/radiance_cascades/: scene_rc2d.cpp  scene_rc2d.hpp  scene_rc3d.cpp  scene_rc3d.hpp  scene_rc3drt.cpp  scene_rc3drt.hpp
src/client/scripts/: debug_camera.cpp  debug_camera.hpp  move_camera.cpp  move_camera.hpp  probes.cpp  probes.hpp  radiance_cascades.cpp  radiance_cascades.hpp  radiance_cascades3d.cpp  radiance_cascades3d.hpp
